tests/negative/neg_pr118b1_select_contract.safe
-- Test: neg_pr118b1_select_contract
-- Description: Select channel arms count as receive-like operations for task receives clauses.
-- Expected: REJECT

package neg_pr118b1_select_contract

   subtype message is integer (0 to 10)

   channel high_ch : message capacity 1
   channel low_ch : message capacity 1
   last_value : message = 0

   task worker with priority = 10, receives low_ch

      loop
         select
            when item : message from high_ch
               last_value = item
         or
            delay 0.1
               last_value = 0
